--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
 .list{
     height: 100vh;
     padding-top: 30vh;
-    background: #973f3f;
+    background: #900C0C;
 }
 
 .landingoptions li{
