--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -4,49 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="video chat app, screen share, live chat">
-    <title>Sign Up | RedPositive Services Pvt. Ltd</title>
-    <link rel="shortcut icon" type="image/PNG" href="images/favicon.png">
+    <title>Edit Profile | RedPositive Services Pvt. Ltd</title>
+    <link rel="shortcut icon" type="image/PNG" href="/images/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/stylesheet/styles.css">
 </head>
 <body>
     <div class="formpage">
         <div class="container">
+            <div class="text-left back">
+                <a class="button-back" href="/profile/<%= user._id %>"><i class="fa fa-arrow-left"></i></a>
+            </div>
+            
             <div class="formheading text-center">
-                <h1>Create an account to proceed..</h1>
+                <h1>Edit Profile</h1>
             </div>
             <div class="formbox">
                 <%- include ('./partials/messages') %>
-                <form action="/register" method="post">
+                <form action="/profile/<%= user._id %>?_method=PUT" method="post">
                     <div class="form-group">
                         <label for="fname">First Name <span class="star">&#9733;</span></label>
-                        <input id="fname" onchange="fnameValidation()" type="text" name="fname" class="form-control" placeholder="First name.." required>
+                        <input id="fname" type="text" name="fname" class="form-control" placeholder="First name.." required autocomplete="off">
                     </div>
                     <div class="form-group">
                         <label for="lname">Last Name <span class="star">&#9733;</span></label>
-                        <input id="lname" onchange="lnameValidation()" type="text" name="lname" class="form-control" placeholder="Last name.." required>
+                        <input id="lname" type="text" name="lname" class="form-control" placeholder="Last name.." required autocomplete="off">
                     </div>
                     <div class="form-group">
-                        <label for="email">Email <span class="star">&#9733;</span></label>
-                        <input id="email" onchange="emailValidation()" type="email" name="email" class="form-control" placeholder="Your email.." required>
+                        <label for="contact">Contact Number</label>
+                        <input id="contact"  type="text" name="contact" class="form-control" maxlength="10" placeholder="Your contact number.." required autocomplete="off">
                     </div>
                     <div class="form-group">
-                        <label for="password">Password <span class="star">&#9733;</span></label>
-                        <input id="password" onchange="passwordValidation()" type="password" name="password" class="form-control" placeholder="Enter a strong password.." required>
-                        <small id="passwordHelp" class="form-text text-muted">Minimum 10 characters long; include small, capital letters, & atleast 1 digit & 1 special character.</small>
-                    </div>
-                    <div class="form-group">
-                        <label for="confirmpassword">Confirm Password <span class="star">&#9733;</span></label>
-                        <input id="confirmpassword" onchange="cpasswordValidation()" type="password" name="confirmpassword" class="form-control" placeholder="Re-enter password.." required>
-                        <small id="confirmpasswordHelp" class="form-text text-muted"></small>
+                        <label for="gender">Gender</label>
+                        <select class="form-control" name="gender" id="gender">
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                            <option value="other">Other</option>
+                        </select>
                     </div>
                     <div class="form-group text-center">
-                        <button class="button button-submit btn-block">Sign Up</button>
-                    </div>
-                    <div class="text-center">
-                        <h5 class="have">Have an account? <a class="red" href="/login">Sign In</a></h5>
+                        <button class="button button-submit btn-block">Update</button>
                     </div>
                 </form>
             </div>
