--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="video chat app, screen share, live chat">
     <title>Forgot Password | RedPositive Services Pvt. Ltd</title>
+    <link rel="shortcut icon" type="image/PNG" href="images/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="/stylesheet/styles.css">
 </head>
 <body>
     <div class="loginformpage">
@@ -17,32 +18,11 @@
                 <h1>Forgot Password</h1>
             </div>
             <div class="loginformbox">
-                <!-- //flash message for success starts -->
-                <% if(success_msg != '') { %>
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        <%= success_msg %>
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                      <strong></strong> 
-                    </div>
-                <% } %>
-                <!-- //flash message ends -->
-                <!-- //flash message for error starts -->
-                <% if(error != '') { %>
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <%= error %>
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                      <strong></strong> 
-                    </div>
-                <% } %>
-                <!-- //flash message ends -->
+                <%- include ('./partials/messages') %>
                 <form action="/forgot" method="post">
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" name="email" autofocus class="form-control" placeholder="Enter email.." required>
+                        <input type="email" name="email" autofocus class="form-control" placeholder="Enter email.." required autocomplete="off">
                     </div>
                     <div class="form-group text-center">
                         <button class="button button-login btn-block">Send Reset Password Link</button>
