--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | RedPositive Services Pvt. Ltd.</title>
-    <link rel="shortcut icon" type="image/PNG" href="images/favicon.png">
+    <title>My Profile | RedPositive Services Pvt. Ltd.</title>
+    <link rel="shortcut icon" type="image/PNG" href="/images/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="/stylesheet/styles.css">
 </head>
 <body>
+
     <div class="homepage">
         <nav class="navbar navbar-expand-lg navbar-light p-4">
             <div class="container">
                 <a class="navbar-brand" href="/home">RedPositive</a>
+                <a class="navbar-brand smaller" href="/profile/<%= user._id %>">Welcome <%=name %></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -27,52 +29,61 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/about">About Us</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
                   </ul>
                 </div>
             </div>
         </nav>
 
         <div class="container">
-            <div class="text-left back">
-                <% if(currentUser) { %>
-                    <a class="button-back" href="/home"><i class="fa fa-arrow-left"></i></a>
-                <% } else { %>
-                    <a class="button-back" href="/"><i class="fa fa-arrow-left"></i></a>
-                <% } %>
+            <div class="formheading text-center">
+                <h1>My Profile</h1>
+            </div>
+            <div class="text-center">
+                <h4><%- include ('./partials/messages') %></h4>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <div class="text-center meetingimgholder">
-                        <img class="meetingimg" src="images/classimg.jpg" alt="Webinars image">
+                <div class="col-md-6 col-sm-12">
+                    <div class="profileimgholder text-center">
+                        <img class="profilepic" src="/profilepic/<%= user.userImage %>" alt="Profile Picture">
+                    </div>
+                    <div class="imgformbox">
+                        <form action="/profile/<%= user._id %>" method="POST" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label>Select profile picture</label>
+                                <input type="file" class="form-control" name="uploadImage">
+                            </div>
+                            <div class="form-group">
+                                <button class="button button-submit btn-block">Upload</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6">
-                    <div class="text-center aboutmsg">
-                        <h5>We are RedPositive, and we provide a platform </h5>
-                        <h5>for you to interact with your colleagues, peers, </h5>
-                        <h5>teachers and family in real-time, being anywhere.</h5>
+                <div class="col-md-6 col-sm-12">
+                    <div class="text-center">
+                        <h5><%= user.fname %></h5>
+                        <h5><%= user.lname %></h5>
+                        <h5><%= user.email %></h5>
+                        <% if(user.gender) %>
+                            <h5><%= user.gender %></h5> 
+                        <% if(user.contact)  %>
+                            <h5><%= user.contact %></h5> 
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <div class="text-center meetingimgholder">
-                        <img class="meetingimg" src="images/webinarimg.jpg" alt="Webinars image">
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6">
-                    <div class="text-center aboutmsg">
-                        <h5>Our main goal is to provide seamless connectivity</h5>
-                        <h5>to connect people across the globe. </h5>
+                    <div class="text-center">
+                        <a class="button button-submit btn-block" href="/profile/<%= user._id %>/edit">Edit Profile</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
     <script src="js/validation.js"></script>
     <script src="js/dynamic.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    </body>
+</body>
 </html>
